# saveroute-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
docs/: dataset_card.md
models/: saveroute_lr.joblib
scripts/: 00_config.py  01_fetch_ofac.py  05_fetch_comtrade.py  10_normalize_sanctions.py  20_build_dataset.py  _utils.py  nightly_pipeline.py  sanctions_parser.py  train_model.py
src/saveroute/: api.py
tests/: test_api.py  test_data_pipeline.py  test_model.py
